infra/istio/gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: trip-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - '*'
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: trip
spec:
  hosts:
    - '*'
  gateways:
    - trip-gateway
  http:
    - match:
        - uri:
            prefix: /v1/trips
        - uri:
            prefix: /swagger
      route:
        - destination:
            host: trip
            port:
              number: 80
